update cv by removing react skills and improve responsive on iindex page

--- a/about_me.html
+++ b/about_me.html
@@ -52,7 +52,7 @@
         <a href="https://twitter.com/sherine_may" target="_blank">
             <img src="./images/twitter.png" alt="twitter" class="contact-icon-aboutme">
         </a>
-        <a href="https://drive.google.com/open?id=1ieaYEpcy1azJsMxz8URkkMtMZZvqpFuN" target="_blank">
+        <a href="https://drive.google.com/open?id=1gocGbjybITKUOgomnRIKahNqHq7YRcu9" target="_blank">
             <img src="./images/cv-icon.png" alt="resume" class="contact-icon-aboutme">
         </a>
       </div>
@@ -101,11 +101,12 @@ setup and manage the customer support center</span>.
             <i class="devicon-css3-plain-wordmark colored"></i>
             <i class="devicon-html5-plain-wordmark colored"></i>
             <i class="devicon-postgresql-plain-wordmark colored"></i>
-            <i class="devicon-react-original-wordmark colored"></i>
+            <!-- <i class="devicon-react-original-wordmark colored"></i> -->
             <i class="devicon-git-plain-wordmark colored"></i>
             <i class="devicon-github-plain-wordmark"></i>
             <i class="devicon-heroku-plain-wordmark colored"></i>
             <i class="devicon-atom-original-wordmark"></i>
+            <i class="devicon-visualstudio-plain"></i>
             <i class="devicon-slack-plain-wordmark"></i>
             <img src="./images/skill-sketch.png" alt="p5" class="skill-icon">
             <img src="./images/skill-invision2.png" alt="p5" class="skill-icon">
@@ -137,7 +138,7 @@ setup and manage the customer support center</span>.
                       <li>Project Management</li>
                       <li>Process Design</li>
                       <li>Customer Requirement Identification</li>
-                      <li>Customer Management</li>
+                      <li>Client Management</li>
                       <li>Team Management</li>
                     </ul>
                 </div>
