update property protoype link

--- a/work.html
+++ b/work.html
@@ -270,7 +270,7 @@
 
                     <div class="popup-demo">
                       <h3 id="popup-h3">Perfect Property</h3>
-                      <a href="https://invis.io/P8NVOYWWC2N" target="_blank">
+                      <a href="https://invis.io/H3QC6ZS9E5C" target="_blank">
                         <img src="./images/demo-icon.png" alt="demo" class="demo-icon scroll-icon bounce">
                       </a>
                     </div>
