--- a/index.html
+++ b/index.html
@@ -10,15 +10,16 @@
   <script src= "p5/addons/p5.dom.js"></script>
   <script src= "p5/addons/p5.sound.js"></script>
 
+  <link rel="stylesheet" href="stylesheets/style.css">
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-96899491-3"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-96899491-3"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-    gtag('config', 'UA-96899491-3');
-  </script>
+  gtag('config', 'UA-96899491-3');
+</script>
 </head>
 <body class="home-page">
   <header>
