updated cv and experience

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="home-name">
           <span ><a href="about_me.html" class="home-text" id="home-sherine">SHERINE FOO</a></span>
           <br>
-          <span class="home-text" id="home-web-dev">FRONT-END DEVELOPER</span>
+          <span class="home-text" id="home-web-dev">UX DEVELOPER</span>
           <br>
           <span class="home-text" id="home-cx-ux">with CX and UX Experience</span>
           <br>
@@ -67,7 +67,7 @@
               <a href="https://twitter.com/sherine_may" target="_blank">
                   <img src="./images/twitter.png" alt="twitter" class="contact-icon">
               </a>
-              <a href="https://drive.google.com/open?id=1gocGbjybITKUOgomnRIKahNqHq7YRcu9" target="_blank">
+              <a href="https://drive.google.com/file/d/1yvX8jeH7CfTZif47pjp3ysZ1hHmZJhoG/view?usp=sharing" target="_blank">
                   <img src="./images/cv-icon.png" alt="resume" class="contact-icon">
               </a>
             </div>
