--- a/about_me.html
+++ b/about_me.html
@@ -36,7 +36,7 @@
 
         <div class="wrapper-me-top">
           <div class="nested-me-webdep">
-            <h2 id="what-me">I'M <br/> FRONT-END <br/>  DEVELOPER</h2>
+            <h2 id="what-me">I'M <br/> UX <br/>  DEVELOPER</h2>
           </div>
 
           <div class="nested-me-name">
@@ -62,7 +62,7 @@
         <a href="https://twitter.com/sherine_may" target="_blank">
             <img src="./images/twitter.png" alt="twitter" class="contact-icon-aboutme">
         </a>
-        <a href="https://drive.google.com/open?id=1gocGbjybITKUOgomnRIKahNqHq7YRcu9" target="_blank">
+        <a href="https://drive.google.com/file/d/1yvX8jeH7CfTZif47pjp3ysZ1hHmZJhoG/view?usp=sharing" target="_blank">
             <img src="./images/cv-icon.png" alt="resume" class="contact-icon-aboutme">
         </a>
       </div>
@@ -76,13 +76,30 @@
         <div class="intro-div" id="intro-screen">
           <h3>INTRO</h3>
           <p id="intro-p">
-            Background in <span class="intro">Engineering</span> and started my career with <span class="intro">Project Engineer</span> in R&D company than moved to <span class="intro">Supplier Quality Engineer</span> in manufacturing industry in Penang, <span class="intro">Malaysia</span>. I than decided to move to <span class="intro">China</span> for <span>Customer Service</span> in construction industry and to transferred to <span class="intro">Sydney</span> to <span class="intro">
+            Background in <span class="intro">Engineering</span> and started my
+            career with <span class="intro">Project Engineer</span> in R&D
+            company than moved to <span class="intro">Supplier Quality
+            Engineer</span> in manufacturing industry in Penang, <span
+            class="intro">Malaysia</span>. I than decided to move to <span
+            class="intro">China</span> for <span>Cliet Management</span> in construction
+            industry and to transferred to <span class="intro">Sydney</span> to
+            <span class="intro">
 setup and manage the customer support center</span>.
             <br><br>
-            I have always been a <span class="intro">dreamer</span> and coding world can make my dream to reality. After 16 years, I decided to change my career by taking full time course in <span class="intro">Web Developer</span>.
+            I have always been a <span class="intro">dreamer</span> and coding
+            world can make my dream to reality. After 16 years, I decided to
+            branch into technical role in technology space by taking full time course in both <span
+            class="intro">User Experience</span> and <span
+            class="intro">Web Developer</span>. With these knowledge, I
+            experience the end-to-end process which enable me to design product
+            based on <span class="intro">consumer mindset</span>. 
 
             <br><br>
-            Having <span class="intro">Process Design</span> experience help me understand the logic of writing functional code. 10 years of Customer Service experience provide me an <span class="intro">empathy</span> mind with the customer, knowing what customer want and gaining their trust makes progress more <span class="intro">effective and higher customer satisfaction</span>.
+            Having <span class="intro">Process Design</span> experience help me
+            understand the logic of writing functional code. 10 years of Client Management experience provide me an <span class="intro">empathy</span> mind with the
+            customer, knowing what customer want and gaining their trust makes
+            progress more <span class="intro">effective and higher customer
+            satisfaction</span>.
             <br><br>
             Did I mention I gain energy from learning?
           </p>
