--- a/about_me.html
+++ b/about_me.html
@@ -90,9 +90,9 @@ setup and manage the customer support center</span>.
             world can make my dream to reality. After 16 years, I decided to
             branch into technical role in technology space by taking full time course in both <span
             class="intro">User Experience</span> and <span
-            class="intro">Web Developer</span>. With these knowledge, I
-            experience the end-to-end process which enable me to design product
-            based on <span class="intro">consumer mindset</span>. 
+            class="intro">Web Developer</span>. Because with these knowledge, I
+            can see the end-to-end process which enable me to design product
+            based on <span class="intro">targetting mind of consumer</span>. 
 
             <br><br>
             Having <span class="intro">Process Design</span> experience help me
