edit about me context

--- a/about_me.html
+++ b/about_me.html
@@ -82,17 +82,11 @@
             Engineer</span> in manufacturing industry in Penang, <span
             class="intro">Malaysia</span>. I than decided to move to <span
             class="intro">China</span> for <span>Cliet Management</span> in construction
-            industry and to transferred to <span class="intro">Sydney</span> to
-            <span class="intro">
-setup and manage the customer support center</span>.
+            industry and to transferred to <span class="intro">Australia</span> to
+            <span class="intro">setup and manage the customer support center</span>.
             <br><br>
-            I have always been a <span class="intro">dreamer</span> and coding
-            world can make my dream to reality. After 16 years, I decided to
-            branch into technical role in technology space by taking full time course in both <span
-            class="intro">User Experience</span> and <span
-            class="intro">Web Developer</span>. Because with these knowledge, I
-            can see the end-to-end process which enable me to design product
-            based on <span class="intro">targetting mind of consumer</span>. 
+            After 16 years, I decided to branch into a technical role in technology space by taking full-time course in both <span class="intro">User Experience</span> and <span
+            class="intro">Web Developer</span>. Because with this knowledge, I can see the end-to-end process which enables me to design product based on <span class="intro">targetting mind of the consumer</span>.
 
             <br><br>
             Having <span class="intro">Process Design</span> experience help me
